Spring Boot 3 (#27)